# editorconfig-core-rust

./: .gitmodules  .ignore  Cargo.toml  Justfile  README.md  rustfmt.toml
.github/workflows/: tests.yaml
crates/tamlil-editorconfig/: Cargo.toml  Justfile
crates/tamlil-editorconfig/src/: core.rs  glob.rs  lib.rs  property.rs
src/: glob.rs  lib.rs  version.rs
