[package]
name = "editorconfig-core"
version = "0.1.0"
edition = "2024"
include = ["/src"]
description = "An EditorConfig Core passing all the editorconfig-core-test tests"
license = "MIT"
homepage = "https://github.com/rotmh/editorconfig-core-rust"
authors = ["Rotem Horesh (rotmh)"]

[dependencies]
regex = "1.11"
regex-syntax = "0.8"

clap = { version = "4.5", features = ["derive"] }
